# comad-world

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STORY.md  comad.config.yaml  docker-compose.yml  install.sh
eye/: .dockerignore  .env.example  .gitignore  01_MCU스토리_시드데이터.txt  02_제조업_시드데이터.txt  03_지정학_시드데이터.txt  04_금융시장_시드데이터.txt  05_바이오의약_시드데이터.txt  06_AI산업_시드데이터.txt  07_에너지기후_시드데이터.txt  08_교육개혁_시드데이터.txt  09_부동산_시드데이터.txt  10_근대사_시드데이터.txt  CLAUDE.md  Dockerfile.api  Makefile  README.md  TEST_GUIDE.md  action_registry.py  action_types.yaml  active_metadata.py  aggregator.py  comadeye-report-27659964.md  community.py  config.py  conftest.py  deduplicator.py  design.pen  docker-compose.yaml  embeddings.py  engine.py  enricher.py  event_chain.py  extractor.py  helpers.py  interview_synthesizer.py  lens_knowledge.py  lenses.py  llm_client.py  loader.py  (+60 more)
eye/analysis/: aggregator.py  base.py  lens_knowledge.py  lenses.py  space_causal.py  space_cross.py  space_hierarchy.py  space_recursive.py  space_structural.py  space_temporal.py
eye/api/: models.py  server.py
eye/app/: globals.css  page.tsx
eye/components/: EntityGraph.tsx
eye/config/: bindings.yaml  cmr.yaml  glossary.yaml  manifest.yaml  meta_edges.yaml  overrides.yaml  propagation_rules.yaml  settings.yaml
eye/docs/: 00_INDEX.md  01_ARCHITECTURE.md  02_ONTOLOGY_SCHEMA.md  03_DATA_MODEL.md  04_PIPELINE.md  05_META_EDGE.md  06_SIMULATION_ENGINE.md  07_ANALYSIS_SPACES.md  08_REPORT_GENERATION.md  09_QA_INTERFACE.md  (+6 more)
(+352 files in other folders)
